--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["eslint:recommended", "airbnb", "prettier", "prettier/react"],
+  "extends": ["eslint:recommended", "airbnb", "prettier"],
   "plugins": ["react-hooks"],
   "env": {
     "browser": true
@@ -13,7 +13,6 @@
     "import/prefer-default-export": [0],
     "react/no-array-index-key": [0],
     "react/no-danger": [0],
-    "no-param-reassign": [0],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   }
